2001-10-28  Mark Kettenis  <kettenis@gnu.org>

	* doublest.c: Improve comments a bit.
	(floatformat_from_length): New function.
	(NAN): Define to 0.0 if not already defined.
	(extract_floating): Rewrite to use floatformat_from_length.  Warn
	instead of error if LEN doesn't match a known floating-point type,
	and return NaN (or 0.0 if NaN isn't available) in that case.
	(store_floating): Likewise, but zero out the target byte-stream if
	LEN doesn't match a known floating-point type.
	(extract_typed_floating): Reformat a bit.
	(store_typed_floating): Reformat a bit.  Add comment about zeroing
	out padding in the target buffer.
	* doublest.h (extract_floating, store_floating): Fix comment about
	deprecation of these functions.  Add parameter names to prototypes.

2001-10-28  Mark Kettenis  <kettenis@gnu.org>

	* i387-tdep.c (print_i387_value): Use extract_typed_floating to
	convert RAW to a DOUBLEST instead of extract_floating.

	* gdbtypes.c (_initialize_gdbtypes): Set floating-point type for
	builtin_type_i387_ext to floatformat_i387_ext.

2001-10-24  Daniel Jacobowitz  <drow@mvista.com>

	* arm-linux-nat.c (fill_gregset): Do not check register_valid[].
	(fill_fpregset): Likewise.

2001-10-26  Orjan Friberg  <orjanf@axis.com>

	* cris-tdep.c (constraint): Loop through the whole cris_spec_regs
	struct, not just the NUM_SPECREGS first entries.
	(bdap_prefix): Read PC before autoincrement.

2001-10-24  Corinna Vinschen  <vinschen@redhat.com>

	* win32-nat.c (DebugSetProcessKillOnExit): New static function
	pointer to Windows' DebugSetProcessKillOnExit() function.
	(DebugActiveProcessStop): Ditto for DebugActiveProcessStop().
	(has_detach_ability): New function.
	(child_attach): If system has detach ability, enable it.
	(child_detach): If system has detach ability, actually  
	detach from process.
	Change tty output to Linux format.

2001-10-23  Jim Blandy  <jimb@redhat.com>

	Isolate STABS readers' use of the `textlow' and `texthigh' fields